<resources>
    <string name="app_name">Service Engineer</string>
    <string name="qa_backend_url">https://qa.nhancenow.com</string>
    <string name="demo_backend_url">https://demo.nhancenow.com</string>
    <string name="in_production_backend_url">https://app.nhancenow.com</string>
    <string name="ae_production_backend_url">https://app-ae.nhancenow.com</string>
    <string name="source_type">android</string>
    <string name="prompt_mobile">Mobile No</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="error_incorrect_mobileno">Incorrect mobile no</string>
    <string name="unable_to_process">Unable to process your request</string>
    <string name="no_history_text">No service requests has been addressed. Service history can\'t be shown.</string>
    <string name="prompt_srn">Service Request No</string>
    <string name="techopractivity">Operations</string>
    <string name="get_details">Get Details</string>
    <string name="error_while_communicating">Error while communicating with server</string>
    <string name="font_normal">fonts/helvetica_neue.ttf</string>
    <string name="font_light">fonts/HelveticaNeueLight.ttf</string>
    <string name="font_bold">fonts/helvetica_neu_bold.ttf</string>
    <string name="font_medium">fonts/HelveticaNeueMedium.ttf</string>
    <string name="font_thin">fonts/HelveticaNeueThin.ttf</string>
    <string name="font_tahoma">fonts/tahoma.ttf</string>
    <string name="reset">Reset</string>
    <string name="preview">Preview</string>
    <string name="service_req_no">Service Request No</string>
    <string name="customer_name">Customer Name</string>
    <string name="cust_mob_no">Customer Mob. No</string>
    <string name="instllation_charges">%s Charges</string>
    <string name="parts_installed">New Parts Installed</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="total_amount">Total Amount</string>
    <string name="discount_amount">Discount (Amount)</string>
    <string name="net_payable_amount">Net Payable Amount</string>
    <string name="part_name">Part Name</string>
    <string name="qty">Qty</string>
    <string name="amount">Amount</string>
    <string name="confirm_send"><![CDATA[Confirm & Send]]></string>
    <string name="invoice_generated">Invoice Generated</string>
    <string name="invoice_generated_successfully">Invoice has been generated and sent to customer successfully.</string>
    <string name="clear_all">Clear All</string>
    <string name="payment_pending">Payment Pending</string>
    <string name="payment_paid">Paid</string>
    <string name="srn">SRN</string>
    <string name="os">Android</string>
    <string name="logout">Logout</string>
    <string name="sure_to_logout">Do you want to Logout?</string>
    <string name="clear_ser_history">Clear Service History</string>
    <string name="sure_to_clear">Are you sure you want to clear all service history?</string>
    <string name="cancel">Cancel</string>
    <string name="exit_toast_txt">Press again to exit NHANCE Service Engineer App</string>
    <string name="additional_labour_charge">Additional labour/part\'s charge</string>
    <string name="tax_name">Tax</string>
    <string name="online">Online</string>
    <string name="cash">Cash</string>
    <string name="mode_of_payment">Mode Of Payment</string>
    <string name="total_cash_collected">Total Cash Collected</string>
    <string name="total_online_payment">Total Online Payment</string>
    <string name="pswd_info_msg">If don\'t have password, please use Mobile Number as Password.</string>
    <string name="frgt_pswd_text"><u>Forgot Password</u></string>
    <string name="copyright">Copyright &#169; 2017, NHANCE</string>
    <string name="new_password">New Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="reset_pswd_btn_label">Change Password</string>
    <string name="network_error">Not able to connect to Nhance. Please check your network connection and try again.</string>
    <string name="requesting_for_otp">Requesting for OTP</string>
    <string name="please_enter_old_password">Please enter old password</string>
    <string name="password_should_be_of_length">Password length should be of minimum 6 characters.</string>
    <string name="please_enter_new_password">Please enter new password.</string>
    <string name="please_enter_confirm_password">Please retype new password.</string>
    <string name="new_password_and_confirm_password_should_be_same">Retyped password doesn\'t match with the new password.</string>
    <string name="old_password_and_new_password_should_not_be_same">Old and new password shouldn\'t be same.</string>
    <string name="change_password_label">Change Password</string>
    <string name="please_enter_a_valid_user_id">Please enter a valid Email id or Mobile No.</string>
    <string name="change_pswd_btn_label">Change</string>
    <string name="frgt_pswd_heading">Forgot Password?</string>
    <string name="please_enter_mobile_number">Seems you forgot to enter Mobile Number</string>
    <string name="please_enter_emailid_mobile_number">For a better experience we need email ID or Mobile Number</string>
    <string name="incomplete_mobile_number">Sorry, we can not take mobile number less than 10-digits</string>
    <string name="mobile_number_should_not_more_than_10">Sorry, we can not take mobile number more than 10-digits</string>
    <string name="invalid_mobile_number_starts_with_zero">Alert! Mobile number field should not start with Zero</string>
    <string name="validate_otp_screen_title">Validate OTP</string>
    <string name="verifying_otp">Verifying OTP</string>
    <string name="please_enter_otp">Please enter OTP.</string>
    <string name="incomplete_otp">Incomplete OTP.</string>
    <string name="hint_otp">Enter OTP</string>
    <string name="validate">Validate</string>
    <string name="name_lable">Name</string>
    <string name="phone_number_title">Number</string>
    <string name="about_us">About-Us</string>
    <string name="navigation_drawe_list_item">Navigation Drawer List Item</string>
    <string-array name="app_navigation_menu">
        
        <item> Change Password</item>
        <item>@string/logout</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="current_password">Current Password</string>
    <string name="login">Login</string>
    <string name="alert">Alert</string>
    <string name="ok">Ok</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="set_password">Set Password</string>
    <string name="reset_pswd_done_login_to_proceed">Your password has been reset successfully!</string>
    <string name="password_changed_successfully">Password changed.</string>
    <string name="mobile_number_blank_error">Seems you forgot to enter Mobile Number</string>
    <string name="please_enter_password">Seems you forgot to enter the Password</string>
    <string name="user_logout_message">Logged out because you logged in from another device.</string>
</resources>