<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/partdetails_ll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:background="@color/background"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:weightSum="1">

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/partname_actv"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_weight=".3"
        android:completionThreshold="1"
        android:ems="5"
        android:hint="@string/part_name"
        android:spinnerMode="dropdown">
    </android.support.v7.widget.AppCompatSpinner>

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/quantity_actv"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_weight=".25"
        android:completionThreshold="1"
        android:digits="1234567890"
        android:ems="4"
        android:hint="@string/qty"
        android:inputType="number"
        android:maxLength="2"
        android:spinnerMode="dropdown">
    </android.support.v7.widget.AppCompatSpinner>

    <TextView
        android:id="@+id/currencycode_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".05"
        android:layout_marginTop="5dp"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/amount_actv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".3"
        android:clickable="false"
        android:editable="false"
        android:ems="5"
        android:focusable="false"
        android:hint="@string/amount">
    </android.support.design.widget.TextInputEditText>

    <ImageButton
        android:id="@+id/delete_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".1"
        android:background="@android:color/transparent"
        android:src="@android:drawable/ic_menu_delete"/>
</LinearLayout>