<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nhance.technician.ui.LoginActivity">

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/screen_title_header_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/version_no_tv"
                android:layout_marginBottom="1dp"
                android:text="@string/validate_otp_screen_title"
                android:gravity="center"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/text_screen_header" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_lay_email_id_or_mobile_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/input_otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_otp"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/validate_btn"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="16dp"
                android:background="@color/colorAccent"
                android:text="@string/validate"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
