<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nhance.technician.ui.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/preferenceLayoutChild"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/new_pswd_input_lay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/input_new_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/new_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionGo"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/confirm_new_pswd_input_lay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/input_confirm_new_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/retype_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionGo"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:id="@+id/btn_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="20dp"
                    android:weightSum="1">

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/change_pswd_bttn"
                        style="?android:textAppearanceSmall"
                        android:layout_width="0dp"
                        android:layout_weight=".5"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="16dp"
                        android:background="@color/colorAccent"
                        android:text="Proceed"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/skip_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="0dp"
                        android:layout_weight=".5"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="16dp"
                        android:background="@color/colorAccent"
                        android:text="Skip"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                </LinearLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/force_set_pswd_bttn"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorAccent"
                    android:text="@string/reset_pswd_btn_label"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>
